# ChangeLog for net-analyzer/etherape
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/etherape/ChangeLog,v 1.45 2007/04/05 15:35:27 pva Exp $

*etherape-0.9.7 (05 Apr 2007)

  05 Apr 2007; <pva@gentoo.org> +etherape-0.9.7.ebuild:
  Version bump.

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> etherape-0.9.6-r1.ebuild:
  Stable on ppc64; bug #170550

  03 Feb 2007; Marcelo Goes <vanquirius@gentoo.org> -etherape-0.9.4.ebuild:
  Remove old 0.9.4 ebuild for bug 160028.

  03 Feb 2007; nixnut <nixnut@gentoo.org> etherape-0.9.6-r1.ebuild:
  Stable on ppc wrt bug 160028

  30 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  etherape-0.9.6-r1.ebuild:
  Stable on amd64 wrt bug #160028.

  30 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  etherape-0.9.6-r1.ebuild:
  Stable on sparc wrt #160028

  30 Jan 2007; Marcelo Goes <vanquirius@gentoo.org>
  etherape-0.9.6-r1.ebuild:
  Mark 0.9.6-r1 x86 stable for bug 160028, reported by Diego Petteno
  <flameeyes at gentoo dot org>.

  02 Nov 2006; Peter Volkov <pva@gentoo.org> -etherape-0.9.6.ebuild,
  etherape-0.9.6-r1.ebuild:
  Added scrollkeeper dependency. Fixed bug #153772. Thank Clark Cgable2003 at
  gmail.com for report. Added inherit on autotools eclass and let it to handle
  autotools stuff. Removed broken version.

*etherape-0.9.6-r1 (06 Sep 2006)

  06 Sep 2006; Peter Volkov <pva@gentoo.org>
  +files/etherape-0.9.6-pause-crash-fix.patch, +etherape-0.9.6-r1.ebuild:
  Fixed crash during pause->play.

*etherape-0.9.6 (04 Sep 2006)

  04 Sep 2006; Peter Volkov <pva@gentoo.org>
  -files/etherape-0.9.1-fix-mkinstalldirs.diff, metadata.xml,
  etherape-0.9.4.ebuild, +etherape-0.9.6.ebuild:
  Appended -i m4 to aclocal to fix bug #145903. Thank Didier Link for report.
  Version bump. Thank Marcelo Goes for report bug #139826. To update properly
  scrollkeeper database ebuild now inherit gnome2.eclass. Added a bit longer
  description in metadata.xml.
