@@ -6,27 +6,27 @@ AUX etherape-0.9.6-pause-crash-fix.patch 549 RMD160 4dc161dae5a70fd90a384d401e4d
 MD5 6d5140092bf0b3abc6ea562a795e783d files/etherape-0.9.6-pause-crash-fix.patch 549
 RMD160 4dc161dae5a70fd90a384d401e4ddccb6812ba85 files/etherape-0.9.6-pause-crash-fix.patch 549
 SHA256 bc16e2e6392312645f8ccc02d1a6561c27f02fd568f4fa8a4409a065995e2d0b files/etherape-0.9.6-pause-crash-fix.patch 549
-DIST etherape-0.9.6.tar.gz 83288 RMD160 2a637fb8a44c40eeea3edb7773797940b85f03cd SHA1 adf6dafea0264ced77a03a5f91b3066391a6a4af SHA256 7c9b27af87423c7ca0f884b1524078ec2d0b6a66bd67016f897c6369bcdd3df8
+DIST etherape-0.9.6.tar.gz 860413 RMD160 a672d3ee19aa1040014a653d440fb7b4e700c753 SHA1 214dddb82d768a1ac41b483cd749ccc22ce20779 SHA256 ab4e2f4dc90e2bccbf72f3bc750df4ea3c234fdbc31a85b640107f5b5c5e47fc
 DIST etherape-0.9.7.tar.gz 860868 RMD160 e2e6ade6869d9472fd862c1b1d1b11f0d11789c3 SHA1 72e5e570530a89ea962a17e55723318010e9a8e5 SHA256 bca8857ee3fe3801410e2cc2777e358cc119761ef3e141bbbbabd8fd2e2f6b7b
 EBUILD etherape-0.9.6-r1.ebuild 917 RMD160 343d51f873315c964dc50454fe600cd87b91da77 SHA1 d115583d71ed18c3b5b93a5f3233934e543aeb68 SHA256 1f2dc57a7c021d7575187c044cd18898976c9ea7ef90576326061e2671ecd3bc
 MD5 8fd510dfd849b76f84b58c597ff16e06 etherape-0.9.6-r1.ebuild 917
 RMD160 343d51f873315c964dc50454fe600cd87b91da77 etherape-0.9.6-r1.ebuild 917
 SHA256 1f2dc57a7c021d7575187c044cd18898976c9ea7ef90576326061e2671ecd3bc etherape-0.9.6-r1.ebuild 917
-EBUILD etherape-0.9.7.ebuild 684 RMD160 828fd0bb7eb6034f69f5440b7f5599c5f65eca12 SHA1 ba6578cc3c06f3255d138b4f378aac73a5b6de15 SHA256 3387c8034f6000947ed5b5c5ad23a3e9ce81ec86e3618445e9ef20fe34ac0840
-MD5 e046dd71734133cfcae1416115a6b71e etherape-0.9.7.ebuild 684
-RMD160 828fd0bb7eb6034f69f5440b7f5599c5f65eca12 etherape-0.9.7.ebuild 684
-SHA256 3387c8034f6000947ed5b5c5ad23a3e9ce81ec86e3618445e9ef20fe34ac0840 etherape-0.9.7.ebuild 684
-MISC ChangeLog 6907 RMD160 71e8683e0b2acf6d392d02f90985f6ebfe40f521 SHA1 021324738e7e433f7125091ffc534471b7339ced SHA256 f4027f897ffca7bd6f57fc07ac82a4785aa34da5b8ef67fbe515a97dd9e24991
-MD5 0a14c5c0a876c501569db10841aaa3cc ChangeLog 6907
-RMD160 71e8683e0b2acf6d392d02f90985f6ebfe40f521 ChangeLog 6907
-SHA256 f4027f897ffca7bd6f57fc07ac82a4785aa34da5b8ef67fbe515a97dd9e24991 ChangeLog 6907
+EBUILD etherape-0.9.7-r1.ebuild 868 RMD160 5781e9d1a7b967ff5bd89cb2424c477d6fd475af SHA1 5634d5c043cad749fab837702ea3cfa7877c03b2 SHA256 64886ba88d6ed3093305ce1e071fd0d05b772f8c1465f48567de144235a4ba33
+MD5 e70c735c49bac080b4cdec60e8f1c54b etherape-0.9.7-r1.ebuild 868
+RMD160 5781e9d1a7b967ff5bd89cb2424c477d6fd475af etherape-0.9.7-r1.ebuild 868
+SHA256 64886ba88d6ed3093305ce1e071fd0d05b772f8c1465f48567de144235a4ba33 etherape-0.9.7-r1.ebuild 868
+MISC ChangeLog 7096 RMD160 c25d14927b85daf9481c327a160586ee086e64ca SHA1 970d8d88802c92bb11e59d6e7e6a4d5c96266d37 SHA256 148af0f7ca8c5bb9b8407bf6ec2e0600f311362df96511d3ed3799f866e0d5e7
+MD5 ceb2b0d9e9efa78e6aa70497008add42 ChangeLog 7096
+RMD160 c25d14927b85daf9481c327a160586ee086e64ca ChangeLog 7096
+SHA256 148af0f7ca8c5bb9b8407bf6ec2e0600f311362df96511d3ed3799f866e0d5e7 ChangeLog 7096
 MISC metadata.xml 621 RMD160 bb14260cccc31851e6a5bca81d962dc5050ab82e SHA1 c639a6e8bcd117c78d6d590f6b073faf8580c9a3 SHA256 24acd07cf59238e01dca25439d05e18f5fa47ad26fe6c387a4a56e6ce1d7e612
 MD5 d9b3c85ba68d751187c28b61eeb4c1a9 metadata.xml 621
 RMD160 bb14260cccc31851e6a5bca81d962dc5050ab82e metadata.xml 621
 SHA256 24acd07cf59238e01dca25439d05e18f5fa47ad26fe6c387a4a56e6ce1d7e612 metadata.xml 621
-MD5 52862f3cd89e3b10e18b82d56c318ee8 files/digest-etherape-0.9.6-r1 241
-RMD160 e539a77604541f356eacb65c4d6951f27bcb130c files/digest-etherape-0.9.6-r1 241
-SHA256 2b06697cdf9c796338af8290328346dbcc17e3b34e54f1c14b6029937fee8785 files/digest-etherape-0.9.6-r1 241
-MD5 52d43613f96b1caa59b2bcaf32b0641a files/digest-etherape-0.9.7 244
-RMD160 7160a404d125feb66ddaa82c8d3651bc96fb4d15 files/digest-etherape-0.9.7 244
-SHA256 3b52991b790f4367c0bed1e5841164ad16b78f66786b7697d73b0d278e919776 files/digest-etherape-0.9.7 244
+MD5 30f0bf9be37aed883506a182b86e0784 files/digest-etherape-0.9.6-r1 244
+RMD160 5672bf9c9a46ad583bb6e0acc33a850bfba6b3d6 files/digest-etherape-0.9.6-r1 244
+SHA256 42ff74fdbe7be9698cf606d230a06a73f2cfe9757680d382d044b86962e085dd files/digest-etherape-0.9.6-r1 244
+MD5 52d43613f96b1caa59b2bcaf32b0641a files/digest-etherape-0.9.7-r1 244
+RMD160 7160a404d125feb66ddaa82c8d3651bc96fb4d15 files/digest-etherape-0.9.7-r1 244
+SHA256 3b52991b790f4367c0bed1e5841164ad16b78f66786b7697d73b0d278e919776 files/digest-etherape-0.9.7-r1 244
