@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/etherape
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/etherape/ChangeLog,v 1.45 2007/04/05 15:35:27 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/etherape/ChangeLog,v 1.46 2007/04/05 16:27:22 pva Exp $
+
+*etherape-0.9.7-r1 (05 Apr 2007)
+
+  05 Apr 2007; <pva@gentoo.org> -etherape-0.9.7.ebuild,
+  +etherape-0.9.7-r1.ebuild:
+  res_mkquery.patch seems still to be required. Readded to 0.9.7 it.
 
 *etherape-0.9.7 (05 Apr 2007)
 
